# wellpathpy

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  Wellpathpy_proto.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy_to_pypi.yml  test_and_build.yml
data/: deviation.csv  well-10H.xls  well-9H.xls
docs/: arc-interpolation.ggb
docs/source/: api.rst  conf.py  index.rst  intro.rst  tutorial.md  tutorial.rst
notebooks/: API_model.ipynb  API_model_OOP.ipynb  Plot wells trajectories.ipynb  Tan Method - Testing.ipynb  Wellpathpy_proto.ipynb
wellpathpy/: __init__.py  arc2chord.py  ave_tan.py  bal_tan.py  checkarrays.py  convert.py  geometry.py  header.py  high_tan.py  interpolate.py  location.py  low_tan.py  mincurve.py  position_log.py  rad_curv.py  read.py  tan.py  wellpath.py  write.py
wellpathpy/test/: __init__.py  run_tests.py  test_ave_tan.py  test_bal_tan.py  test_calculations.py  test_core.py  test_geometry.py  test_header.py  test_high_tan.py  test_interpolate.py  test_interpolate_simmeas.py  test_location.py  test_low_tan.py  test_mincurve.py  test_position_log.py  test_rad_curve.py  test_read.py  test_unit_conversion.py  test_wellpath.py  test_workflow.py  test_write.py
wellpathpy/test/fixtures/: Well_Surveys_Projected_to_TD.csv  header.json  mock_data_set.csv  straight_dev_section.csv  straight_vert_section.csv  well10.csv  well9.csv
